--- a/src/main/webapp/site.css
+++ b/src/main/webapp/site.css
@@ -1,6 +1,63 @@
 @charset "UTF-8";
 
+
+.content {
+  max-width: 500px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .logo {
 	display: flex;
 	justify-content: center;
+	padding: 10px;
 }
+
+.welcome {
+	display: flex;
+	justify-content: center;
+	font-size: 400%;
+
+}
+
+/* The box around the topnav */
+.TopNav {    
+    border: 2px;
+    border-radius: 3px;
+    margin: 0 auto 60 auto;
+    padding: 8px;
+    width: 980; 
+}
+
+/* Add a black background color to the top navigation */
+.TopNav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.TopNav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  width: 22%
+}
+
+/* Change the color of links on hover */
+.TopNav a:hover {
+  background-color: #f5c4b0;
+  color: black;
+}
+
+p {
+  
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  width: 600px; 
+}  
+
+
